Infinite loss error does nor rise exception anymore to prevent MPI from quitting, it prints insted.

--- a/scripts/implementations.ipynb
+++ b/scripts/implementations.ipynb
@@ -2,23 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-25T13:10:35.849657Z",
-     "start_time": "2019-10-25T13:10:35.793835Z"
+     "end_time": "2019-10-25T18:23:49.483896Z",
+     "start_time": "2019-10-25T18:23:49.220427Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload\n",
@@ -49,8 +40,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-25T12:45:32.399348Z",
-     "start_time": "2019-10-25T12:45:03.569779Z"
+     "end_time": "2019-10-25T18:24:18.416830Z",
+     "start_time": "2019-10-25T18:23:59.043141Z"
     }
    },
    "outputs": [],
@@ -100,7 +91,7 @@
    "source": [
     "clean = True\n",
     "dopca = False\n",
-    "remove_cols = True\n",
+    "remove_cols = False\n",
     "cols = (4, 5, 6, 12, 26, 27, 28)\n",
     "#cols=(0, 4, 5, 6, 12, 23, 24, 25, 26, 27, 28)\n",
     "max_comp = 30  # For cleaning, and no removing cols\n",
@@ -481,11 +472,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-25T17:09:19.275505Z",
-     "start_time": "2019-10-25T17:05:12.740268Z"
+     "end_time": "2019-10-25T19:30:34.080614Z",
+     "start_time": "2019-10-25T19:28:24.056052Z"
     },
     "scrolled": true
    },
@@ -505,13 +496,27 @@
       "Using lambda = 6.0e+00\n",
       "Using lambda = 7.7e+01\n",
       "Using lambda = 1.0e+03\n",
-      "Best lambda from error: 1.00e+03\n",
-      "Best lambda from accuracy: 2.78e-03\n"
+      "Best lambda from error: 7.74e+01\n",
+      "Best lambda from accuracy: 1.67e-05\n"
      ]
     }
    ],
    "source": [
-    "cross_validation_demo(x, y, ridge_regression, args_rr, k_fold=4, degree = 10)"
+    "clean = True\n",
+    "dopca = False\n",
+    "remove_cols = False\n",
+    "cols = (4, 5, 6, 12, 26, 27, 28)\n",
+    "#cols=(0, 4, 5, 6, 12, 23, 24, 25, 26, 27, 28)\n",
+    "max_comp = 30  # For cleaning, and no removing cols\n",
+    "cross_validation_demo(x,\n",
+    "                      y,\n",
+    "                      ridge_regression,\n",
+    "                      args_rr,\n",
+    "                      k_fold=4,\n",
+    "                      degree=6,\n",
+    "                      clean=clean,\n",
+    "                      dopca=dopca,\n",
+    "                      remove_cols=remove_cols)"
    ]
   },
   {
@@ -579,8 +584,7 @@
     "w_rr, loss_rr = ridge_regression(y_train, tx_train, lambda_rr)\n",
     "rr_prediction = predict_labels(w_rr, tx_test)\n",
     "print('Train loss = %.3f'%loss_rr)\n",
-    "create_csv_submission(id_out_test, predict_labels(w_rr, tx_test) , '../results/rr_pred_deg10_cl1_pc0_rmcol0.csv')\n",
-    "#create_csv_submission(id_out_test, predict_labels(w_sgd, tx_out) , '../results/sgd_pred_noadapt.csv')"
+    "create_csv_submission(id_out_test, predict_labels(w_rr, tx_test) , '../results/rr_pred_deg10_cl1_pc0_rmcol0.csv')"
    ]
   },
   {
