Comments on run.py

--- a/scripts/implementations.ipynb
+++ b/scripts/implementations.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-27T09:58:16.315242Z",
-     "start_time": "2019-10-27T09:58:15.677337Z"
+     "end_time": "2019-10-28T12:19:00.059321Z",
+     "start_time": "2019-10-28T12:18:59.690117Z"
     }
    },
    "outputs": [],
@@ -142,7 +142,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Gradient Descent"
    ]
@@ -155,6 +157,7 @@
      "end_time": "2019-10-27T22:05:43.427470Z",
      "start_time": "2019-10-27T21:49:29.045003Z"
     },
+    "hidden": true,
     "scrolled": true
    },
    "outputs": [
@@ -245,7 +248,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-17T12:37:03.486835Z",
      "start_time": "2019-10-17T12:37:03.480662Z"
-    }
+    },
+    "hidden": true
    },
    "source": [
     "np.savetxt('../data/w_gd_acc.dat', w_gd)"
@@ -358,7 +362,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Ridge Regression"
    ]
@@ -370,7 +376,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-27T21:46:56.916681Z",
      "start_time": "2019-10-27T21:46:56.581811Z"
-    }
+    },
+    "hidden": true
    },
    "outputs": [
     {
@@ -399,7 +406,8 @@
     "ExecuteTime": {
      "end_time": "2019-10-27T21:47:01.053505Z",
      "start_time": "2019-10-27T21:47:01.042175Z"
-    }
+    },
+    "hidden": true
    },
    "source": [
     "np.savetxt('../results/w_rr.dat', w_rr)"
@@ -407,7 +415,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Logistic Regression"
    ]
@@ -420,6 +430,7 @@
      "end_time": "2019-10-27T12:28:24.664593Z",
      "start_time": "2019-10-27T12:12:16.106070Z"
     },
+    "hidden": true,
     "scrolled": false
    },
    "outputs": [
@@ -516,6 +527,7 @@
      "end_time": "2019-10-27T12:47:05.472838Z",
      "start_time": "2019-10-27T12:29:55.813945Z"
     },
+    "hidden": true,
     "scrolled": false
    },
    "outputs": [
